--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.34",
     "electron-devtools-installer": "^3.2.0",
+    "electron-is-dev": "^3.0.1",
     "electron-reload": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
