--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "postinstall": "electron-builder install-app-deps",
     "electron:dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://127.0.0.1:3000 && tsc -p electron -w\" \"wait-on http://127.0.0.1:3000 && tsc -p electron && electron .\"",
     "electron:build": "npm run build && tsc -p electron && electron-builder",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron:dist": "npm run build && tsc -p electron && electron-builder --mac --dir"
   },
   "build": {
     "extends": null,
